--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Poulpie</title>
     <meta name="description" content="poulpie">
     <meta name="author" content="poulpie">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,21 +16,7 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="menu"></div>
-        <div class="surface">
-            <h1 class="text">Réseau de plongeur</h1>
-             <h1 class="text">Divers network</h1>
-        </div>
-        <div class="deepwater">
-             <h1 class="text">Réservez et plongez</h1>
-              <h1 class="text">Click & Dive</h1>
-        </div>
-        <div class="seabed">
-            <h1 class="start text">Bientôt</h1>
-            <h1 class="end text">Soon</h1>
-        </div>
-    </div>
+    <div id="app" ></div>
     <script src="dist/bundle.js"></script>
 </body>
 </html
