--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,6 @@
 
 <body>
     <div id="app" ></div>
-    <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html
