--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <title>Poulpie</title>
-    <meta name="description" content="poulpie">
-    <meta name="author" content="poulpie">
-   <script src="https://use.fontawesome.com/3665ea6455.js"></script>
-   <link rel="stylesheet" type="text/css" href="node_modules/bulma/css/bulma.css">
-
+  <title>Poulpie</title>
+  <meta name="description" content="poulpie">
+  <meta name="author" content="poulpie">
+  <script src="https://use.fontawesome.com/3665ea6455.js"></script>
+  <link rel="stylesheet" type="text/css" href="node_modules/bulma/css/bulma.css">
+  <!-- Begin MailChimp Signup Form -->
+  <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
 <body>
-    <div id="app" ></div>
-    <script src="dist/bundle.js"></script>
+  <div id="app"></div>
+  <script src="dist/bundle.js"></script>
 </body>
 </html
