--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!doctype html>
-
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-
-    <title>Poulpie</title>
-    <meta name="description" content="poulpie">
-    <meta name="author" content="poulpie">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
-
-<body>
-    <div id="app" ></div>
-    <script src="bundle.js"></script>
-</body>
-</html
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Poulpie</title><meta name="description" content="poulpie"><meta name="author" content="poulpie"><script src="https://use.fontawesome.com/3665ea6455.js"></script><link rel="shortcut icon" href="favicon.ico"></head><body><div id="app"></div><script type="text/javascript" src="bundle.567a990c5437e4b23a2f.js"></script></body></html>
