add meta viewport

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Poulpie</title>
   <meta name="description" content="poulpie">
   <meta name="author" content="poulpie">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/3665ea6455.js"></script>
 </head>
 
